<resources>
    <string name="app_name">AppEcomerceMarkePro</string>
    <string name="title_home">Inicio</string>
    <string name="title_favorite">Favoritos</string>
    <string name="title_cart">Carrinho</string>
    <string name="title_notification">Notificações</string>
    <string name="title_user">Eu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>