<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_2_line"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite_3_line"
        android:title="@string/title_favorite"/>

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/outline_shopping_cart_24"
        android:title="@string/title_cart"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notification_2_line"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user_3_line"
        android:title="@string/title_user" />
</menu>